# dogs-diseases-classification

./: .gitignore  README.md
application/: .gitignore  README.md  package-lock.json  package.json  vite.config.js
application/src/: App.vue  main.js
application/src-tauri/: Cargo.toml  diseases_classification.onnx  tauri.conf.json
application/src-tauri/src/: classifier.rs  main.rs
application/src/assets/: theme.css
application/src/components/: FooterComponent.vue  HeaderComponent.vue  ResultComponent.vue  SymptompsComponent.vue
application/src/components/subcomponents/: DiseaseOption.vue  SymptomOption.vue
training/: Dataset_generation.ipynb  Model_training.ipynb  README.md  diseases_classification.onnx
